update old topics and images  and insert mina capter

--- a/tcc2/bibliografia.bib
+++ b/tcc2/bibliografia.bib
@@ -206,10 +206,21 @@ address = {USA}
 	Year = {2004}
 }
 
-@article{flutter2017,
-	Author = {Google},
-	Title = {Flutter},
-	Year = {2017}
+@article{reactNative,
+	Author = {Facebook},
+	Title = {React Native},
+	Year = {2022}
+}
+
+@article{typescript,
+	Author = {Microsoft},
+	Title = {TypeScript},
+	Year = {2022}
+}
+@article{intelij,
+	Author = {Jetbrains},
+	Title = {IntelliJ IDEA},
+	Year = {2022}
 }
 
 @article{firebase2011,
