--- a/tcc2/editaveis/introducao.tex
+++ b/tcc2/editaveis/introducao.tex
@@ -166,8 +166,9 @@ Seguem os objetivos Geral e Específicos atrelados a esse trabalho.
 \subsection{Objetivo Geral}
 
 
-Esse estudo propõe um aplicativo informativo e de recomendações de tarefas com base no perfil e no ciclo 
-menstrual, no intuito de apoiar as mulheres na identificação de mudanças; no autoconhecimeno; na inteligência emocional, e na produtividade pessoal.
+Esse estudo propõe um aplicativo informativo e de recomendações de tarefas com base no perfil e 
+nas fases do ciclo menstrual, no intuito de apoiar as mulheres na identificação de mudanças; 
+no autoconhecimeno; na inteligência emocional, e na produtividade pessoal.
 
 
 \subsection{Objetivos Específicos}
@@ -201,12 +202,11 @@ A monografia está organizada nos seguintes capítulos:
         
         \item Capítulo 4 - Metodologia: acorda o plano metodológico que orienta o presente trabalho em termos conceituais, bem como de análise de resultados;
 
-        \item Capítulo 5 - Proposta: apresenta a proposta deste trabalho em si, e
+        \item Capítulo 5 - Mina: apresenta o aplicativo de recomendação em si, e
 
-        \item Capítulo 6 - Resultados Obtidos: acorda os resultados alcançados até o momento, no escopo do TCC-01.
-          
+        \item Capítulo 6 - Resultados Obtidos: acorda os resultados alcançados com a realização do trabalho, e
+        
+        \item Capítulo 7 - Conclusão: apresenta melhorias e features a serem implementadas
+        no futuro.
+
 \end{itemize}
-% Como a concentração de estradiol e progesterona variam muito de mulher para mulher, utilizá-lo como medida única pode ser insuficiente para determinar individualmente a fase do ciclo \cite{poroma2014}.
-% em 1973 Barbara Sommer revisou toda a lieratura existente e concluiu, naquela época, que não existia evidencias que a fase do ciclo menstrual influenciava em mudanças na cognição e performance motora por causa de problemas na metodolodia. Co
-%Há uma diminuição significativa do comprimento da fase folicular de acordo com a idade das mulheres. Normalmente mulheres de 18 a 24 anos tem a fase com o comprimento de 14 dias e mulheres de 40 a 44 anos tem de 10 dias }. 
-%A fase folicular Quando um folículo é selecionado o FSH diminui gradativamente e progressivamente a produção de estradiol começa a aumentar. Quando o estradiol chega ao pico, na fase folícular, 12 a 24 horas depois o LH surge e a ovulação ocorre tipicamente de 10 a 12h depois do surgimento do LH \cite{fritz2010}. Clinicamente é possível determinar o ciclo ovulatório pelo surgimento do LH e a secreção de progesterona da fase lútea \cite{fritz2010}, também é possível determiná-lo pelo aumento da temperatura basalcorporal. Na ovulação, o folículo se transforma num corpus luteum que é capaz de sintetizar estradiol e progesterona e está pronto para ser fecundado.
