--- a/tcc2/editaveis/metodologia.tex
+++ b/tcc2/editaveis/metodologia.tex
@@ -4,19 +4,21 @@
 Neste capítulo será apresentada a metodologia utilizada no desenvolvimento dessa 
 monografia. Na seção 4.2, será detalhado a metodologia adotada, de acordo com os 
 critérios de abordagem, natureza, objetivos e procedimentos. A seção 4.3 acordará o fluxo 
-das atividades que foram desenvolvidas nesse primeiro momento do trabalho, e uma projeção das atividades 
-que serão desenvolvidas no Trabalho de Conclusão de Curso 2 (TCC2). A seção 4.4 abordará a pesquisa bibliográfica.
-A seção 4.5 focará na metodologia de desenvolvimento. A seção 4.6 apresenta como será conduzida a análise de resultados. 
+das atividades que foram desenvolvidas na primeira parte do trabalho (TCC1), e as atividades
+ desenvolvidas no Trabalho de Conclusão de Curso 2 (TCC2). A seção 4.4 abordará a pesquisa 
+ bibliográfica.
+A seção 4.5 focará na metodologia de desenvolvimento. A seção 4.6 apresenta como foi conduzida 
+a análise de resultados. 
 Por fim, a seção 4.7 ilustra 
-o cronograma das atividades já desenvolvidas ao longo do TCC1, bom como o provável cronograma para 
-condução das atividades previstas no TCC2.
+o cronograma das atividades já desenvolvidas ao longo desse trabalho.
 
 
 \section{Classificação da Pesquisa}
 
 De acordo com \citeonline{gerhardt2009}, a metodologia é o estudo da organização dos 
 caminhos a serem percorridos para se realizar uma pesquisa, um estudo ou para se 
-fazer ciência. No caso de uma pesquisa científica, ela pode ser classificada quanto à abordagem; quanto à natureza; quanto aos objetivos e quanto aos procedimentos.
+fazer ciência. No caso de uma pesquisa científica, ela pode ser classificada quanto à 
+abordagem; quanto à natureza; quanto aos objetivos e quanto aos procedimentos.
 
 \subsection{Quanto à Abordagem}
 
@@ -80,7 +82,7 @@ mulheres com interesse no tema.
 
 O fluxo a seguir foi construído utilizando a notação BPMN, e apresenta 
 tanto as atividades já desenvolvidas ao longo da execução do 
-TCC1, quanto as que serão desenvolvidas no TCC2. 
+TCC1, quanto as desenvolvidas no TCC2. 
 Adicionalmente, os próximos tópicos detalharão de 
 forma mais específica cada etapa desse processo.
 
@@ -91,10 +93,12 @@ forma mais específica cada etapa desse processo.
         \label{fig03}
 \end{figure}
 
-\textbf{Definir tema}: o tema foi escolhido, junto aos orientadores, utilizando o ciclo menstrual como domínio e discutindo
+\textbf{Definir tema}: o tema foi escolhido, junto aos orientadores, utilizando o ciclo 
+menstrual como domínio e discutindo
 possíveis aplicações da engenharia de software sobre o tema. 
 
-\textbf{Criar grupo para estudo de caso}: foi criado um grupo com mulheres em idade fértil e perfis diversos, 
+\textbf{Criar grupo para estudo de caso}: foi criado um grupo com mulheres em idade 
+fértil, 
 que se interessaram pelo tema e resolveram apoiá-lo. Esse grupo é e será utilizado 
 para o estudo de caso.
 
@@ -103,8 +107,11 @@ inicial do tema e levantadas publicações pertinentes sobre os tópicos dessa m
 
 \textbf{Elaborar proposta inicial}: nessa etapa, foi elaborada uma proposta inicial que 
 atendesse a necessidade da comunidade e conciliasse domínio e engenharia de software. 
-Optou-se pela criação de um aplicativo com sistema de recomendação de tarefas baseadas no perfil e
-na fase do ciclo menstrual feminino. No capítulo \ref{ch:proposta}, a proposta inicial será mais bem detalhada.
+Optou-se pela criação de um aplicativo com sistema de recomendação de tarefas baseadas 
+no perfil e
+na fase do ciclo menstrual feminino. No capítulo \ref{ch:mina}, o aplicativo de recomendações de 
+tarefa, intitulado Mina, será 
+melhor detalhado.
 
 \textbf{Definir suporte tecnológico}: nessa etapa, foram levantadas as tecnologias necessárias para o desenvolvimento da aplicação, 
 gerenciamento e pesquisa. Gerou o capítulo \ref{ch:suporte} como artefato.
@@ -122,7 +129,7 @@ para guiar a pesquisa, permitindo classificar essa última quanto
 \textbf{Revisar metodologia de pesquisa}: o capítulo de metodologia foi revisado pelos orientadores e foram implementadas as devidas correções e sugestões.
 
 \textbf{Definir proposta da aplicação}: delimitou-se o escopo da proposta inicial, obtendo um maior detalhamento 
-dos objetivos gerais e específicos deste trabalho. Gerou como artefato o capítulo \ref{ch:proposta}.
+dos objetivos gerais e específicos deste trabalho. Gerou como artefato o capítulo Proposta no TCC1.
 
 \textbf{Implementar prova de conceito}: implementou-se parte da proposta, desenvolvendo um protótipo e uma aplicação inicial, com o objetivo 
 de avaliar a viabilidade do projeto e das tecnologias escolhidas.
@@ -131,10 +138,9 @@ de avaliar a viabilidade do projeto e das tecnologias escolhidas.
  
 \textbf{Apresentar trabalho}: apresentar o trabalho aos membros da banca.
 
-\textbf{Implementar aplicação}: esta atividade será desenvolvida no TCC2 e tem como objetivo 
-o desenvolvimento do aplicativo.
+\textbf{Implementar aplicação}: atividade desenvolvida no TCC2, gerou o aplicativo Mina como artefato.
 
-\textbf{Analisar resultados}: esta atividade será desenvolvida no TCC2 e tem como objetivo 
+\textbf{Analisar resultados}: Atividade desenvolvida no TCC2 e com o objetivo de
 analisar os resultados obtidos com a implementação da aplicação, conferindo se ela atende 
 aos objetivos gerais e específicos estabelecidos no Capítulo 1 desta monografia.
 
@@ -186,7 +192,8 @@ em execução. Quando finalizadas, as tarefas são movidas para a coluna feito.
         \label{fig04}
 \end{figure}
 
-No escopo do TCC2, além do Kanban, que será utilizado para o gerenciamento das tarefas a serem desenvolvidas no TCC2,
+No escopo do TCC2, além do Kanban, utilizado para o gerenciamento das tarefas relativas a escrita 
+a serem desenvolvidas no TCC2,
 também será utilizado um processo baseado em metodologias ágeis, mais especificamente, no Scrum \cite{scrum2017}. O fluxo de desenvolvimento 
 pela metodologia Scrum é demonstrado na Figura \ref{fig05}.
 
@@ -242,10 +249,12 @@ referencial teórico, Capitúlo \ref{ch:referencial}. Isso possibilitou a aplica
 um questionário para coleta de dados, descrito no Capítulo 5.
 
 Por fim, a preparação do relatório deu-se após a aplicação do questionário, acordado na etapa anterior
+
 \section{Cronograma}
 
-O cronograma da Tabela \ref{tab04} explicita as atividades executadas com seus respectivos prazos no TCC1, já a Tabela \ref{tab05} 
-explicita as prováveis datas de execução do TCC2.
+O cronograma da Tabela \ref{tab04} explicita as atividades executadas com seus 
+respectivos prazos no TCC1, já a Tabela \ref{tab05} 
+explicita as datas de execução do TCC2.
 Para fins de uma visualização mais adequada, foi considerado com a letra \textbf{P}, a
 data prevista, e a letra \textbf{E}, para a data Executada.
 
@@ -293,23 +302,24 @@ mês de março e o retorno ocorreu no mês de agosto. Algumas atividades continu
 	
 	\begin{tabular}{ccccc}
 		\toprule
-		\textbf{Atividades} & \textbf{Fevereiro} & 
-		\textbf{Março}  & \textbf{Abril}& \textbf{Maio}\\
+		\textbf{Atividades} & \textbf{Janeiro} & 
+		\textbf{Fevereiro}  & \textbf{Março}& \textbf{Abril}\\
 		\midrule
-		\begin{minipage} [t] {0.2\textwidth} \centering Realizar Correções da Banca \end{minipage} & P &  &  &  \\
+		\begin{minipage} [t] {0.2\textwidth} \centering Realizar Correções da Banca \end{minipage} & P/E &  &  &  \\
 		\midrule
-		\begin{minipage} [t] {0.2\textwidth} \centering Implementar Aplicação \end{minipage} & P & P & P &  \\
+		\begin{minipage} [t] {0.2\textwidth} \centering Implementar Aplicação \end{minipage} & P & P - E & P - E & P - E  \\
 		\midrule
-		\begin{minipage} [t] {0.2\textwidth} \centering Análisar Resultados \end{minipage} &  &  &P &P  \\
+		\begin{minipage} [t] {0.2\textwidth} \centering Análisar Resultados \end{minipage} &  &  &P &P - E  \\
 		\midrule
-		\begin{minipage} [t] {0.2\textwidth} \centering Refinar Monografia \end{minipage} &  &  &  & P \\
+		\begin{minipage} [t] {0.2\textwidth} \centering Refinar Monografia \end{minipage} &  &  &  & P - E \\
 		\midrule
-		\begin{minipage} [t] {0.2\textwidth} \centering Apresentar Trabalho \end{minipage} &  & & & P \\
+		\begin{minipage} [t] {0.2\textwidth} \centering Apresentar Trabalho \end{minipage} &  & & & P - E \\
 		\bottomrule
 	\end{tabular}
 \end{table}
 
-O cronograma do TCC2 é uma prévia das prováveis datas de entrega das atividades a serem desenvolvidas no semestre de 2020/2.
+O cronograma do TCC2 trás as datas de entrega das atividades a que foram desenvolvidas no semestre de 2021/2. Houve uma diferença de dois semestres 
+entre a execução do TCC1 e a do TCC2.
 
 \section{Considerações Finais do Capítulo}
 
@@ -324,7 +334,7 @@ As naturezas desta pesquisa estão sinalizadas pelos quadros amarelos.
         \label{fig06}
 \end{figure}
 
-Para o gerenciamento das atividades do escopo do TCC1, foi utilizado o Kanban. Como metodologia de desenvolvimento para o TCC2, será utilizada uma adaptação do scrum.
+Para o gerenciamento das atividades do escopo do TCC1, foi utilizado o Kanban. Como metodologia de desenvolvimento para o TCC2, foi utilizada uma adaptação do scrum.
 
 Para a coleta e análise de resultados, foi utilizado um estudo 
 de casos aplicado a um grupo de mulheres, sendo esse criado pela 
@@ -333,8 +343,4 @@ realizada no escopo do TCC2. Portanto, o estudo de casos com o
 grupo de interessadas, ainda será objeto de estudo.
 
 
-
-          
-%Do ponto de vista dos procedimentos técnicos esta é uma pesquisa 
-%experimental que procura estabelecer uma relação entre as causas e os efeitos de um determinado fenômino. Este fenômeno seria, os efeitos do ciclo menstrual femino na performance individual das mulheres nas tarefas cotididanas.
 
