--- a/tcc2/editaveis/referencialteorico.tex
+++ b/tcc2/editaveis/referencialteorico.tex
@@ -46,7 +46,7 @@ folículo-estimulante (FSH) (vide Figura \ref{fig01}). Assim que um desses
 folículos for selecionado, o FSH diminui gradativamente, e progressivamente a produção de
 estrogênios começará a aumentar. Os estrogénios produzidos pelo folículo em
 crescimento são responsáveis também pelo desenvolvimento do endométrio. Essa fase é normalmente 
-referida como fase folicular tardia.
+referida como fase folicular final.
 
 
 Normalmente, mulheres de 18 a 24 anos com ciclo de 28 dias tem a fase com
